<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.CountdownActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:contentDescription="@string/primary_color_background_for_action_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/primary_background" />

    <TextView
        android:id="@+id/tvUserAgeInMicro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alata"
        android:textAllCaps="true"
        android:textColor="@color/accent"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/countdown_name" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif"
        android:text="@string/select_a_date"
        android:textColor="@color/primaryDark"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/dateSelectorBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/dateSelectorBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/white"
        android:text="@string/select_date"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.413" />

    <View
        android:id="@+id/hr"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/lightGray"
        app:layout_constraintTop_toBottomOf="@+id/dateSelectorBtn"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/primaryDark"
        app:contentPadding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hr">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:gravity="fill"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:textAlignment="center">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/years"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/accent"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/ageYears"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/accent"
                    android:textSize="34sp"
                    tools:text="28" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/months"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/accent"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/ageMonths"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/accent"
                    android:textSize="34sp"
                    tools:text="8" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/days"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/accent"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/ageDays"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/accent"
                    android:textSize="34sp"
                    tools:text="21" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/hr2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/lightGray"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/primaryDark"
        app:contentPadding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hr2"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/total_years"
                    android:textColor="@color/accent"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/totalYears"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textStart"
                    android:textColor="@color/accent"
                    android:textSize="18sp"
                    tools:ignore="NestedWeights"
                    tools:text="28" />
            </LinearLayout>

            <View
                android:id="@+id/hr4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@color/lightGray"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                tools:layout_editor_absoluteX="0dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/total_months"
                    android:textColor="@color/accent"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/totalMonths"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textStart"
                    android:textColor="@color/accent"
                    android:textSize="18sp"
                    tools:ignore="NestedWeights"
                    tools:text="344" />
            </LinearLayout>

            <View
                android:id="@+id/hr5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@color/lightGray"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                tools:layout_editor_absoluteX="0dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/total_weeks"
                    android:textColor="@color/accent"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/totalWeeks"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textStart"
                    android:textColor="@color/accent"
                    android:textSize="18sp"
                    tools:ignore="NestedWeights"
                    tools:text="1498" />
            </LinearLayout>

            <View
                android:id="@+id/hr6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@color/lightGray"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                tools:layout_editor_absoluteX="0dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/total_days"
                    android:textColor="@color/accent"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/totalDays"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textStart"
                    android:textColor="@color/accent"
                    android:textSize="18sp"
                    tools:ignore="NestedWeights"
                    tools:text="10491" />
            </LinearLayout>

            <View
                android:id="@+id/hr7"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@color/lightGray"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                tools:layout_editor_absoluteX="0dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/total_hour"
                    android:textColor="@color/accent"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/totalHours"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textStart"
                    android:textColor="@color/accent"
                    android:textSize="18sp"
                    tools:ignore="NestedWeights"
                    tools:text="105925" />
            </LinearLayout>

            <View
                android:id="@+id/hr8"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@color/lightGray"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                tools:layout_editor_absoluteX="0dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/total_minutes"
                    android:textColor="@color/accent"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/totalMinutes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textStart"
                    android:textColor="@color/accent"
                    android:textSize="18sp"
                    tools:ignore="NestedWeights"
                    tools:text="20820811" />
            </LinearLayout>

            <View
                android:id="@+id/hr9"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@color/lightGray"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                tools:layout_editor_absoluteX="0dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="0dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/total_seconds"
                    android:textColor="@color/accent"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/totalSeconds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textStart"
                    android:textColor="@color/accent"
                    android:textSize="18sp"
                    tools:text="50518015881" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>